<resources>
    <string name="app_name">Movies App</string>
    <string name="buttonC">Press to continue</string>
    <string name="labelL">Welcome to the Movies app!</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="cast">Cas1, Cast2, Cat3, Cast4, Cast5</string>
    <string name="description">Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="newMovies">New &amp; upcoming movies</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="viewall">ALL MOVIES</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="oscars">Oscars</string>
    <string name="golden">2021 Golden Globe Awards Winners</string>
    <string name="thisYear">Upcoming this year</string>
    <string name="nextYear">Now playing movies</string>
    <string name="prompt_password">Password</string>
    <string name="button_filter">Search</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="filter_input">Enter movie title</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Password">Password</string>
    <string name="Password2">Confirm password</string>
    <string name="Forgotpsw">Forgot password?</string>
    <string name="Noaccount">Don\'t have an account?</string>
    <string name="signup"> Sign Up</string>
    <string name="fb">Facebook</string>
    <string name="award">Award winning movies</string>
    <string name="upcoming">Upcoming movies</string>
    <string name="google">Google</string>
    <string name="moviesAll">MoviesAll</string>
    <string name="logout">Logout</string>
    <string name="favorites">My favorites</string>
    <string name="bestMo">Best Motion Picture of the Year</string>
    <string name="bestDrama">Best Motion Picture - Drama</string>
    <string name="bestMusical">Best Motion Picture - Musical or Comedy</string>
    <string name="bestAnimated">Best Motion Picture - Animated</string>
    <string name="fav">Movie added to favorite list</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="directors">Name1 Surname1, Name2 Surname2, Name3 Surname3, Name4 Surname4</string>
    <string name="movieTitle">Title Title Title Title Title Title Title Title Title Title</string>

</resources>