<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item android:title="Menu">
            <menu>
                <item android:id="@+id/home"
                    android:title="@string/home"
                    android:icon="@drawable/baseline_home_black_48">

                </item>
                <item android:id="@+id/favorites"
                    android:title="@string/favorites"
                    android:icon="@drawable/baseline_favorite_black_48">

                </item>

                <item android:id="@+id/upcoming"
                    android:title="@string/upcoming"
                    android:icon="@drawable/baseline_app_registration_black_48">

                </item>

                <item android:id="@+id/login"
                    android:title="@string/login"
                    android:icon="@drawable/baseline_login_black_48">
                </item>
                <item android:id="@+id/register"
                    android:title="@string/register"
                    android:icon="@drawable/baseline_app_registration_black_48">
                </item>

            </menu>
        </item>

    </group>
    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share_black_48"
                android:title="@string/share"/>

            <item android:id="@+id/nav_send"
                android:icon="@drawable/baseline_send_black_48"
                android:title="@string/send"/>
        </menu>
    </item>

</menu>