<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="Menu">
            <menu>
                <item android:id="@+id/home"
                    android:title="@string/home"
                    android:icon="@drawable/baseline_home_black_48">

                </item>
                <item android:id="@+id/award"
                    android:title="@string/award"
                    android:icon="@drawable/baseline_movie_filter_black_48">

                </item>

                <item android:id="@+id/upcoming"
                    android:title="@string/upcoming"
                    android:icon="@drawable/baseline_app_registration_black_48">

                </item>
                <item android:id="@+id/favorites"
                    android:title="@string/favorites"
                    android:icon="@drawable/baseline_favorite_black_48">
                </item>
                <item android:id="@+id/logout"
                    android:title="@string/logout"
                    android:icon="@drawable/baseline_logout_black_48">
                </item>
            </menu>
        </item>
    </group>

</menu>