<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpcomingFragment"
    android:background="@drawable/background">



    <androidx.constraintlayout.widget.ConstraintLayout


        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="720dp">

        <TextView
            android:id="@+id/upcomingMoviesThisYear"
            android:layout_width="371dp"
            android:layout_height="29dp"
            android:layout_marginTop="22dp"
            android:text="@string/thisYear"
            android:textColor="@color/colorG"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/upcomingMoviesNextYear"
            android:layout_width="376dp"
            android:layout_height="36dp"
            android:layout_marginTop="34dp"
            android:text="@string/nextYear"
            android:textColor="@color/colorG"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/viewPagerThisYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPagerThisYear" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerThisYear"
            android:layout_width="407dp"
            android:layout_height="165dp"
            app:layout_constraintBottom_toTopOf="@+id/upcomingMoviesNextYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingMoviesThisYear"
            app:layout_constraintVertical_bias="0.087" >

        </androidx.viewpager2.widget.ViewPager2>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerNextYear"
            android:layout_width="409dp"
            android:layout_height="165dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingMoviesNextYear"></androidx.viewpager2.widget.ViewPager2>

        <Button
            android:id="@+id/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners"
            app:layout_constraintTop_toBottomOf="@+id/viewPagerNextYear" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>